--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/sass.css">
+        <link rel="stylesheet" href="css/Animate.css">
     <meta charset="utf-8">
     <title>EMER</title>
   </head>
@@ -15,14 +16,25 @@
       </div>
       </div>
       <a href="#render"><div class="buttonMore">
-        <h2>More</h2>
+        <h2>How it works?</h2>
       </div></a>
     </div>
+
+
     <div class="render" id="render">
       <a name='render'></a>
+      <img id='render-prod' src="img/0.jpg" alt="render" />
+      <img id='img1' src="img/1.png" alt="1" />
+      <img id='img2' src="img/2.png" alt="2" />
+      <img id='img3' src="img/3.png" alt="3" />
+      <img id='img4' src="img/4.png" alt="4" />
+      <img id='img5' src="img/5.png" alt="5" />
+      <img id='img6' src="img/6.png" alt="6" />
+      <img id='img7' src="img/7.png" alt="7" />
 
     </div>
-    <script type="text/javascript" src="js/jquery-2.2.3.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery-2.2.3.js"></script> -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
   </body>
 </html>
