--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="header" id="buttonMore">
+      <video autoplay poster="img/bg.png" id="bgvid" loop>
+      <source src="img/bg.mp4" type="video/mp4">
+      </video>
       <div class="">
 
         <img src="img/EMER_logo_white.png" alt="EMER_logo_white" />
