--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="render" id="render">
       <a name='render'></a>
       <img id='render-prod' src="img/0.jpg" alt="render" />
+      <img id='render-p' src="img/0.jpg" alt="render" />
       <img id='img1' src="img/1.png" alt="1" />
       <img id='img2' src="img/2.png" alt="2" />
       <img id='img3' src="img/3.png" alt="3" />
@@ -36,6 +37,13 @@
       <img id='img7' src="img/7.png" alt="7" />
 
     </div>
+    <div class="contacts">
+      <p>P: +38(096) 999 33 88 <br>
+         E: info@emerbelt.me <br>
+      </p>
+      <input type="email" name="name" value="Subscribe">
+    </div>
+
     <!-- <script type="text/javascript" src="js/jquery-2.2.3.js"></script> -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
