--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       </div></a>
     </div>
 
+    <div class="about">
+      <h1>PROBLEM</h1>
+      <h1>SOLUTION</h1>
+    </div>
+
 
     <div class="render" id="render">
       <img id='render-prod' src="img/0.jpg" alt="render" />
